fixed dialog layout overflow

--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -1,8 +1,5 @@
-@media screen and (max-width: 768px) {
-    .container {
-        flex-direction: column !important;
-        width: 300px;
-    }
+.header {
+    font-size: 1.4em;
 }
 
 .buttons {
