--- a/src/components/CreditTile/index.module.scss
+++ b/src/components/CreditTile/index.module.scss
@@ -8,7 +8,7 @@
     transition: all 0.3s ease;
     background-color: transparent;
     border-radius: 15px;
-    padding: 10px;
+    padding: 5px;
     border: solid 1px transparent;
     display: block;
     &:hover {
